# raw_marketplace

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  products_fixture.json  pyproject.toml
.github/workflows/: check-pr-source.yml  run-unit-tests.yml  run_flake.yml
backend/: Dockerfile  README.md  django-entrypoint.sh  pyproject.toml
backend/order/: urls.py  views.py
backend/order/migrations/: 0004_remove_order_cart_order_payu_order_id_and_more.py  0005_remove_cart_cart_entries_cartentry_cart.py
backend/product/: admin.py  serializers.py
backend/product/migrations/: 0001_initial.py
backend/raw_marketplace/: settings.py
backend/user/: models.py  urls.py  utils.py
backend/user/migrations/: 0002_remove_user_is_admin_remove_user_is_buyer_and_more.py  0003_alter_user_options_alter_user_managers_and_more.py  0004_alter_user_options_remove_user_date_joined_and_more.py  0005_alter_user_options_user_date_joined_user_first_name_and_more.py
cart/: models.py
cart/migrations/: 0001_initial.py
category/: models.py
category/migrations/: 0001_initial.py
checkout/: admin.py  models.py
checkout/migrations/: 0001_initial.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/router/: index.js
frontend/src/stores/: index.js
frontend/src/stores/modules/: auth.js
frontend/src/views/Auth/: Login.vue
image/: admin.py  models.py
image/migrations/: 0001_initial.py
order/: admin.py  models.py  serializers.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_alter_checkout_user.py  0003_alter_order_user.py  0006_cart_session_id_cart_user.py
product/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_remove_option_name_option_type_option_value_and_more.py  0003_alter_product_images.py  0004_remove_image_path_alter_image_filename_and_more.py
raw_marketplace/: asgi.py  settings.py  urls.py  wsgi.py
user/: models.py  serializers.py  urls.py  utils.py  views.py
user/migrations/: 0001_initial.py
