[project]
name = "raw-marketplace"
version = "0.1.0"
description = "Backend side of Raw Marketplace project based on Django Rest Framework"
authors = [
    {name = "kabust",email = "tulyulyuk91@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
